--- a/css/style.less
+++ b/css/style.less
@@ -1,10 +1,13 @@
-
+@base:rgb(12,72,99);
+@font_col:rgb(30,116,170);
+@second_logo_col:rgb(26,177,242);
+@symbol:url(../img/symb.png);
 *{
 	margin: 0;
 	width: auto;
-	.{};
 	header{
-		color: red;
+		background: @symbol no-repeat;
+		background-size: contain;
 		height: 150px;
 		width: 50px;
 	};
