--- a/css/style.less
+++ b/css/style.less
@@ -9,29 +9,34 @@
 	hyphens: auto;
 	word-wrap: break-word;
 	video{
-		width: auto;
+		position: relative;
+		width: 1660px;
+		margin: 0 auto;
 		height: auto;
 		z-index: -30;
 	}
 	.heading{
+		top: 500px;
+		left: 50px;
 		width: 1300px;
-		height: 400px;
+		background: white;
+		height: 200px;
 		z-index: 20;
 	}
 	img{
 		src:@symbol;
 	}
 	.header_pic{
-		width: 600px;
-		height: 600px;
+		width: 400px;
+		height: 400px;
 		z-index: +11;
 		background: @symbol no-repeat;
+		background-size: cover;
 	}
 	body{
-		background: url('../img/toe.jpg');
 		figure{
 			margin: auto;
-
+	
 		}
 
 		display:block;
